Set Transition and search logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<span id="prediction">Human Being</span>
 
 		    <!-- Camera trigger -->
-		    <button id="camera--trigger">Take a picture</button>
+		    <button id="camera--trigger"><img src="search.png" alt="Image Search"></button>
 
 		</main>
 
