--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 		<!-- Link to main style sheet -->
 		<link rel="stylesheet" href="style.css"> 
+		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
+<!-- Load the MobileNet model. -->
+		<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
 	</head>
 	<body>
 
@@ -32,9 +35,6 @@
 
 		<!-- Reference to your JavaScript file -->
 		<script src="app.js"></script>
-
-		<!-- Reference to adapter.js -->
-		<script src="adapter-min.js"></script>
 
 	</body>
 </html>
