Full Functionality Done. Styling remaining

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 		    <!-- Camera output -->
 		    <img src="//:0" alt="" id="camera--output">
 
-			<span id="prediction">Human Being</span>
+			<span id="prediction">
+			</span>
 
 		    <!-- Camera trigger -->
-		    <button id="camera--trigger"><img src="search.png" alt="Image Search"></button>
+		    <button id="camera--trigger"><img id='currentTask' src="search.png" alt="Image Search"></button>
 
 		</main>
 
