Search animation complete

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 			<span id="prediction">
 			</span>
+			<span id="statusSpan">
+			</span>
 
 		    <!-- Camera trigger -->
 		    <button id="camera--trigger"><img id='currentTask' src="search.png" alt="Image Search"></button>
