--- a/index.html
+++ b/index.html
@@ -3,27 +3,23 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- Name of the app -->
 		<title>Camera App</title>
 
-		<!-- Link to main style sheet -->
-		<link rel="stylesheet" href="style.css"> 
+		<link rel="stylesheet" href="/css/style.css"> 
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
-<!-- Load the MobileNet model. -->
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
 	</head>
 	<body>
 
-		<!-- Camera -->
 		<main id="camera">
 
-		    <!-- Camera sensor -->
+
 		    <canvas id="camera--sensor"></canvas>
 		    
-		    <!-- Camera view -->
+
 		    <video id="camera--view" autoplay playsinline></video>
 		    
-		    <!-- Camera output -->
+
 		    <img src="//:0" alt="" id="camera--output">
 
 			<span id="prediction">
@@ -31,13 +27,12 @@
 			<span id="statusSpan">
 			</span>
 
-		    <!-- Camera trigger -->
-		    <button id="camera--trigger"><img id='currentTask' src="search.png" alt="Image Search"></button>
+
+		    <button id="camera--trigger"><img id='currentTask' src="/images/search.png" alt="Image Search"></button>
 
 		</main>
 
-		<!-- Reference to your JavaScript file -->
-		<script src="app.js"></script>
+		<script src="/js/app.js"></script>
 
 	</body>
 </html>
