--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<html lang=”en”>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="Predict the images using Tensorflow.js">
+		<meta name="theme-color" content="#ff7f50"/>
+		<link rel="shortcut icon" href="/favicon.ico">
+
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 		<title>Camera App</title>
+		<link rel="manifest" href="/manifest.json">
 
 		<link rel="stylesheet" href="/css/style.css"> 
-		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
-		<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
 	</head>
 	<body>
 
@@ -28,11 +33,17 @@
 			</span>
 
 
-		    <button id="camera--trigger"><img id='currentTask' src="/images/search.png" alt="Image Search"></button>
+		    <button id="camera--trigger"><img style="height: 30px; width: 30px;" id='currentTask' src="/images/search.png" alt="Image Search"></button>
 
 		</main>
 
-		<script src="/js/app.js"></script>
+		<!-- Load TensorFlow.js. This is required to use MobileNet. -->
+		<script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
+		<!-- Load the MobileNet model. -->
+		<script defer src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
+
+		<script defer src="/js/app.js"></script>
+
 
 	</body>
 </html>
