--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="Predict the images using Tensorflow.js">
-		<meta name="theme-color" content="#ff7f50"/>
-		<link rel="shortcut icon" href="/favicon.ico">
-
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-		<title>Camera App</title>
-		<link rel="manifest" href="/manifest.json">
-
-		<link rel="stylesheet" href="/css/style.css"> 
-	</head>
-	<body>
-
-		<main id="camera">
-
-
-		    <canvas id="camera--sensor"></canvas>
-		    
-
-		    <video id="camera--view" autoplay playsinline></video>
-		    
-
-		    <img src="//:0" alt="" id="camera--output">
-
-			<span id="prediction">
-			</span>
-			<span id="statusSpan">
-			</span>
-
-
-		    <button id="camera--trigger"><img style="height: 30px; width: 30px;" id='currentTask' src="/images/search.png" alt="Image Search"></button>
-
-		</main>
-
-		<!-- Load TensorFlow.js. This is required to use MobileNet. -->
-		<script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"> </script>
-		<!-- Load the MobileNet model. -->
-		<script defer src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"> </script>
-
-		<script defer src="/js/app.js"></script>
-
-
-	</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="description" content="Predict the images using Tensorflow.js"><meta name="theme-color" content="#ff7f50"><link rel="shortcut icon" href="/favicon.ico"><link rel="apple-touch-icon" href="/apple-touch-icon.png"><title>Camera App</title><link rel="manifest" href="/manifest.json"><link rel="stylesheet" href="/css/style.css"></head><body><main id="camera"><canvas id="camera--sensor"></canvas><video id="camera--view" autoplay playsinline></video><img src="//:0" alt="" id="camera--output"> <span id="prediction"></span> <span id="statusSpan"></span> <button id="camera--trigger"><img style="height:30px;width:30px" id="currentTask" src="/images/search.png" alt="Image Search"></button></main><!-- Load TensorFlow.js. This is required to use MobileNet. --><script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1"></script><!-- Load the MobileNet model. --><script defer src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0"></script><script defer src="/js/app.js"></script></body></html>
